<resources>
    <string name="app_name">Flood Alert</string>

    <string name="no_data">No Data Available</string>
    <string name="name">Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="continue_str">CONTINUE</string>
    <string name="add">Add</string>
    <string name="precaution">Precaution</string>
    <string name="start">Start</string>
    <string name="precaution_steps">Precaution Steps</string>
    <string name="nearby_parking">Nearby Vehicle Parking</string>
    <string name="nearby_bridges">Nearby bridges</string>
    <string name="set_alert">Set Alert Timer</string>
    <string name="add_nearby_parking">Add Nearby Vehicle Parking</string>
    <string name="add_nearby_bridges">Add Nearby bridges</string>
    <string name="intro_one">Use watertight safe</string>
    <string name="intro_one_description">They are particularly useful in areas prone to flooding, or if you live in a region with heavy rainfall. They can also be useful in homes or offices where plumbing leaks are a concern.</string>
    <string name="intro_two">Back up important documents</string>
    <string name="intro_two_description">Backing up important documents is essential for safeguarding vital information against loss, damage, or theft. Whether you’re preparing for emergencies, reducing risk, or ensuring easy access, a well-organized backup strategy can save you time and stress. Here’s a detailed guide to effectively back up your important documents</string>
    <string name="intro_three">Keep extra batteries and flashlights</string>
    <string name="intro_three_description">Maintaining extra batteries and flashlights is essential for preparedness during power outages, emergencies, or when you need reliable lighting in situations where access to electricity is limited. Having these items readily available ensures safety, convenience, and functionality in a variety of scenarios. Here’s a comprehensive guide on how to effectively manage extra batteries and flashlights.</string>
    <string name="intro_four">Move to the highest floor</string>
    <string name="intro_four_description">Moving to the highest floor of a building or residence can offer several advantages, from enhanced views to increased security. However, it also comes with specific considerations that should be taken into account to ensure a smooth transition and optimal living experience. Here’s a detailed guide on what to consider and how to make the most of living on the highest floor.</string>

</resources>