<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/hld_action_bar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:background="@color/action_bar_color"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back"
            android:layout_marginLeft="16dp"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/action_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/add_nearby_bridges"
            android:textAllCaps="true"
            android:textColor="@color/action_bar_text_color"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_box_border"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:textColorHint="@color/gray"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_box_border"
        android:hint="@string/latitude"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:textColorHint="@color/gray"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_box_border"
        android:hint="@string/longitude"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:textColorHint="@color/gray"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/add"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

</LinearLayout>