<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/intro_1"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_one"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="30dp"
            android:textColor="@color/intro_heading"
            android:layout_below="@+id/image"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_one_description"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="4dp"
            android:layout_centerVertical="true"
            android:textColor="@color/intro_heading"
            android:layout_below="@+id/heading"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_previous"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:contextClickable="true"
            android:focusableInTouchMode="true"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="50dp"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:contextClickable="true"
            android:focusableInTouchMode="true"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="50dp"/>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/continue_str"
            android:contextClickable="true"
            android:visibility="gone"
            android:focusableInTouchMode="true"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="50dp"/>

    </RelativeLayout>


</FrameLayout>