<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/hld_action_bar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:background="@color/action_bar_color"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back"
            android:layout_marginLeft="16dp"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/precaution"
            android:textAllCaps="true"
            android:textColor="@color/action_bar_text_color"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_steps"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="left|center"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:gravity="center"
            android:paddingStart="16dp"
            android:text="@string/precaution_steps"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:src="@drawable/ic_right_arrow" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_nearby_parking"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="16dp"
        android:gravity="left|center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:gravity="center"
            android:paddingStart="16dp"
            android:text="@string/nearby_parking"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:src="@drawable/ic_right_arrow"
            android:textColor="#f5f5f5" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_nearby_bridges"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="16dp"
        android:gravity="left|center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:gravity="center"
            android:paddingStart="16dp"
            android:text="@string/nearby_bridges"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:src="@drawable/ic_right_arrow"
            android:textColor="#f5f5f5" />

    </RelativeLayout>

</LinearLayout>