<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/hld_action_bar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:background="@color/action_bar_color"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_menu"
                android:layout_marginLeft="16dp"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/home"
                android:textAllCaps="true"
                android:textColor="@color/action_bar_text_color"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/hld_action_bar" />

        <RelativeLayout
            android:id="@+id/hld_alert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="#80000000">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/flood_alert"
                    android:layout_alignParentStart="true" />

                <Button
                    android:id="@+id/btn_continue"
                    android:layout_width="wrap_content"
                    android:padding="12dp"
                    android:layout_height="wrap_content"
                    android:text="@string/precaution"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/button_color"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true" />

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/btn_open_map"
            android:layout_width="wrap_content"
            android:padding="12dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:visibility="gone"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="30dp"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/nav_bar_color"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/splash_logo" />

            <GridLayout
                android:id="@+id/menu_grid_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image"
                android:columnCount="1"
                android:orientation="vertical" />

        </RelativeLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>